--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "src/main.js",
   "scripts": {
-    "start": "node src/main.js"
+    "start": "node --max-old-space-size=4096 src/main.js",
+    "dev": "node --max-old-space-size=4096 src/dev.js",
+    "convert": "node src/process/convert.js",
+    "compress": "node src/process/compress.js",
+    "decompress": "node --max-old-space-size=4096 src/process/decompress.js"
   },
   "license": "ISC",
   "type": "module",
@@ -11,6 +15,7 @@
     "chalk": "^5.3.0",
     "fs": "^0.0.1-security",
     "image-decode": "^1.2.2",
-    "image-encode": "^1.3.1"
+    "image-encode": "^1.3.1",
+    "rgb-hex": "^4.1.0"
   }
 }
